--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,17 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".GameOverActivity"></activity>
-        <activity android:name=".HighscoresActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".GameOverActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".HighscoresActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".MainActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".GameActivity"></activity>
-        <activity android:name=".SettingsActivity" />
+        <activity android:name=".GameActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".SettingsActivity" android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
